# Beyond_Call

./: .gitignore  AGENTS.md  README.md  index.html  newlogo  package-lock.json  package.json  tsconfig.json
docs/: ROADMAP.md
docs/plans/: PLAN.original.user.md  PLAN.updated.2026-03-04.md  PLAN.windows.port.2026-03-04.md
docs/testing/: MAC_SMOKE_TEST.md
scripts/macos/: commit-smoke-report.sh  install-whisper-model.sh  new-smoke-report.sh  preflight.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/macos/: screen_capture_audio.swift
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  types.ts
src/styles/: app.css
test-reports/: .gitkeep
