[package]
name = "ai-transcribe-local"
version = "0.1.0"
description = "Local call recorder and AI analyzer"
authors = ["niberium"]
edition = "2021"

[lib]
name = "ai_transcribe_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = "0.6.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
